--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Dealing with Loss/Death</title>
 
   <!-- Google Fonts -->
-  <link href="https://fonts.googleapis.com/css?family=Montserrat|Ubuntu" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Asap|Jomolhari&display=swap" rel="stylesheet">
 
   <!-- CSS Stylesheets -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
@@ -64,6 +64,10 @@
 
       <div class="row">
        <div id="testimonial-carousel" class="carousel slide" data-ride="false">
+		   <ol class="carousel-indicators">
+         <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
+         <li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
+       </ol>
       <div class="carousel-inner">
         <div class="carousel-item active container-fluid">
           <h2 class="testimonial-text">I am Mason Qualls I made this site to help those who are going through the loss of what is important to you or those around you.</h2>
@@ -164,7 +168,7 @@
 
     <div class="container-fluid">
 		
-		<h3 class="big-heading">If you see any errors, want some help with a digital project or just simply wish to talk here's my contact info:</h3>
+		<h4 class="big-heading">If you see any errors, want some help with a digital project or wish to talk here's my contact info:</h4>
     </div>
 	 <form>
 		  <div class="row">
