text and color change

--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
 			  <h2 class="feature-title">Message Me!</h2>
 			  <textarea placeholder="Message Here" class="message-box"></textarea>
        		</div>
-		 <button type="button" class="btn btn-outline-info">Submit</button>
+		 <button type="button" class="btn btn-outline-light">Submit</button>
 	  </form>
   </section>
 
